# Youtinerary

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  Trunk.toml  tailwind.config.js
.github/workflows/: backend-api.yaml  rust-dev.yml  rust.yaml  webassembly.yaml
.sqlx/: query-05d3c7497f2496af384de48d41f8ad639e73424adc9c6ca8e2df3021f61575e3.json  query-40ad1c03e8f6dbd4fe37832e505d56d4d5519e661b4cc19e734cf6be8153e6c8.json  query-44fd5c9954abde1d1487228c31dc573b7bc92c0dadbec0fead3e6a5ef1748568.json  query-595386857617ff463a9794cc21c9169f5f41c173e96a02ec5760dc5939e72631.json  query-5af3f71b793e624a1c5ea7cdf1af14582a3aec5815857e0a6b272dff6752dfec.json  query-eca183aaf3f3b1c7fa7bff7f2833c3462de970489cee6c29e08bc09be5463224.json
api/: Cargo.toml
api-core/: Cargo.toml
api-core/src/: app_state.rs  lib.rs  middlewares.rs
api-features/: Cargo.toml
api-features/src/: create_flight.rs  create_itinerary.rs  create_user.rs  delete_itinerary.rs  get_itineraries.rs  get_itinerary.rs  get_itinerary_stays.rs  lib.rs  post_itinerary_stay.rs  update_itinerary.rs
api-models/: Cargo.toml
api-models/src/: lib.rs
api/migrations/: 20231207025014_Initial_Create.down.sql  20231207025014_Initial_Create.up.sql  20240124064302_unqiue_emails.down.sql  20240124064302_unqiue_emails.up.sql
api/src/: configuration.rs  database.rs  error_handling.rs  features.rs  health_check.rs  logging.rs  main.rs  middlewares.rs  models.rs
api/src/features/: create_flight.rs  create_itinerary.rs  create_user.rs  get_itineraries.rs  get_itinerary.rs
auth/: Cargo.toml
auth-config/: Cargo.toml
auth-config/src/: lib.rs
auth/src/: error.rs  lib.rs
components/: Cargo.toml
components/src/: calendar.rs  cards.rs  date_picker.rs  flights.rs  lib.rs  slide_out.rs  user_icon.rs
components/src/calendar/: months.rs  trip.rs
components/src/forms/: inputs.rs
components/src/slide_out/: add_flight.rs  create_itinerary.rs
config/: base.yaml  local.yaml
icons/: Cargo.toml
icons/src/: lib.rs  settings.rs
models/: Cargo.toml
models/src/: itineraries.rs  lib.rs  user.rs
pages/: Cargo.toml
pages/src/: about.rs  home.rs  itineraries.rs  itinerary.rs  lib.rs  login.rs  signup.rs
pages/src/login/: login_auth.rs
src/: app.rs  command_pallet_search.rs  fileserv.rs  lib.rs  main.rs  models.rs
src/api/: database.rs  health_check.rs  main.rs
src/api_core/: lib.rs
src/api_features/: get_itinerary.rs  lib.rs  update_itinerary.rs
src/app/: auth.rs  command_pallet.rs  components.rs  header.rs  icons.rs  nav.rs  pages.rs  state.rs
src/app/components/: calendar.rs  date_picker.rs  forms.rs  itinerary_card.rs  navigation.rs  slide_out.rs
src/app/components/slide_out/: add_flight.rs  create_itinerary.rs
src/app/icons/: about.rs  home.rs
src/app/pages/: about.rs  home.rs  itineraries.rs  itinerary.rs  login.rs  signup.rs
src/components/: slide_out.rs
src/components/calendar/: state.rs
src/components/cards/: flight_summary.rs  itinerary_summary.rs
src/core/components/: Cargo.toml
src/core/components/src/: calendar.rs  date_picker.rs  flights.rs  lib.rs
src/core/components/src/calendar/: day.rs  months.rs  state.rs  trip.rs
src/core/components/src/forms/: inputs.rs
src/core/components/src/slide_out/: add_flight.rs  create_itinerary.rs
src/core/models/: Cargo.toml
src/core/models/src/: lib.rs
src/core/pages/: Cargo.toml
src/core/pages/src/: itineraries.rs  lib.rs
src/core/state/: Cargo.toml
src/core/state/src/: lib.rs
src/models/: user.rs
src/pages/: itineraries.rs
src/webapp/: Cargo.toml  index.html
src/webapp/app/: nav.rs  pages.rs
src/webapp/src/: app.rs  main.rs
src/webapp/src/app/: auth.rs
src/webapp/src/app/icons/: logo.rs
src/webapp/style/: main.css
state/: Cargo.toml
state/src/: lib.rs
style/: main.css
webapp/: Cargo.toml  Trunk.toml  index.html  main.css  tailwind.config.js
webapp/src/: app.rs  main.rs
webapp/src/app/: auth.rs  command_pallet.rs  header.rs  nav.rs
webapp/src/app/components/: divider.rs  flights.rs  forms.rs  user_icon.rs  user_signup.rs
webapp/src/app/components/forms/: inputs.rs
webapp/src/app/icons/: about.rs  home.rs  settings.rs
webapp/src/app/pages/: itinerary.rs  signup.rs
webapp/src/models/: user.rs
webapp/style/: main.css
youtinerary/: Cargo.toml
youtinerary/src/: app.rs
youtinerary/src/app/: components.rs  nav.rs  pages.rs  state.rs
youtinerary/src/app/icons/: logo.rs
