[workspace]
resolver = "2"
members = [ "api","auth", "auth-config", "components", "icons", "pages", "state", "webapp"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos-use = { version = "0.10", features = ["serde", "serde_json" ] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
wasm-bindgen = { version = "0.2" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}
uuid = { version = "1.6", features = ["serde", "v4"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
gloo-net = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
serde_json = "1.0.108"
chrono-tz = { version = "0.8.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.12"
reqwest = {version = "0.11", features = ["json"]}
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres",  "chrono", "uuid" ] }
tokio = {version="1.35", features = ["rt-multi-thread"]}
tracing-bunyan-formatter = "0.3"
hyper = { version = "1", features = ["server"] }
axum-extra = { version="0.9",  features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
headers = "0.4"
oauth2 = "4.4"
async-session = "3.0"
redis = { version = "0.24", features = ["tokio-comp"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-stdout = { version = "0.2", features = ["trace"] }
axum-tracing-opentelemetry = "0.16.0"
tracing-opentelemetry = "0.22"
init-tracing-opentelemetry = { version = "0.16.0", features = [ "otlp", "tracing_subscriber_ext", ] }
tracing-opentelemetry-instrumentation-sdk =  { version = "0.16.0" }
opentelemetry_sdk = {version="0.21" , features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14" , features = ["tonic", "default"] }


[workspace.dependencies.axum]
version = "0.7"
features = [ "json", "multipart", "tracing", "ws"]
