[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace  = true } 
chrono-tz = { workspace  = true } 
serde = { workspace  = true } 
serde_json = { workspace  = true } 
sqlx = { workspace  = true } 
tokio = { workspace  = true } 
tracing = { workspace  = true } 
tracing-bunyan-formatter = { workspace  = true } 
tracing-subscriber = { workspace  = true } 
anyhow = { workspace  = true } 
hyper = { workspace  = true } 
reqwest = { workspace  = true } 
axum-extra = { workspace  = true } 
tower = { workspace  = true } 
tower-http = { workspace  = true } 
headers = { workspace  = true } 
oauth2 = { workspace  = true } 
async-session = { workspace  = true } 
redis = { workspace  = true } 
config = { workspace  = true } 
axum = { workspace  = true}
opentelemetry = { workspace  = true }
opentelemetry-stdout = { workspace  = true }
axum-tracing-opentelemetry  = { workspace  = true }
tracing-opentelemetry-instrumentation-sdk =  { workspace  = true }
tracing-opentelemetry = { workspace = true}
opentelemetry_sdk = { workspace = true}
opentelemetry-otlp = { workspace = true}


auth = { path = "../auth" }
