[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace  = true } 
axum = { workspace  = true}
axum-tracing-opentelemetry  = { workspace  = true }
config = { workspace  = true } 
opentelemetry = { workspace  = true }
opentelemetry-otlp = { workspace = true}
opentelemetry_sdk = { workspace = true}
redis = { workspace  = true } 
reqwest = { workspace  = true } 
serde = { workspace  = true } 
sqlx = { workspace  = true } 
tokio = { workspace  = true } 
tower = { workspace  = true } 
tower-http = { workspace  = true } 
tracing = { workspace  = true } 
tracing-opentelemetry = { workspace = true}
tracing-subscriber = { workspace  = true } 


auth = { path = "../auth" }
api-features = { path = "../api-features" }
api-core = { path = "../api-core" }
