[package]
name = "auth-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { workspace  = true } 
config = { workspace  = true } 
anyhow = { workspace  = true } 
serde = { workspace  = true } 
reqwest = { workspace  = true } 
