[package]
name = "youtinerary"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1


[dependencies]
leptos = { workspace = true }
leptos-use = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
uuid = { workspace = true }
leptos_meta = { workspace = true }
gloo-net = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono-tz = { workspace = true }
chrono = { workspace = true }
