[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
log = { workspace = true}
console_log = { workspace = true}
console_error_panic_hook ={ workspace = true } 

state = { path = "../core/state" }
models = { path = "../core/models" }
pages = { path = "../core/pages" }
components = { path = "../core/components" }

