[package]
name = "components"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos-use = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }

state = { path = "../state" }
models = { path = "../models" }
