[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos-use = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

models = { path = "../models" }
